Web Inspector: REGRESSION(r242604): Console: unread indicator overlaps selection background of previous scope bar item https://bugs.webkit.org/show_bug.cgi?id=204630
Reviewed by Timothy Hatcher.

When a new message is added that is immediately filtered, such as from an existing filter or
previously selected scope bar items, rather than show a blinking circle next to the level of
the new message in the scope bar (which doesn't cover the case where there's a filter and
was often hard to notice), add a dismissable warning banner explaning that the message had
been filtered with a button to clear all filters.

* UserInterface/Views/LogContentView.js:
(WI.LogContentView):
(WI.LogContentView.prototype.didAppendConsoleMessageView):
(WI.LogContentView.prototype._previousMessageRepeatCountUpdated):
(WI.LogContentView.prototype._logCleared):
(WI.LogContentView.prototype._messageSourceBarSelectionDidChange):
(WI.LogContentView.prototype._scopeBarSelectionDidChange):
(WI.LogContentView.prototype._filterMessageElements):
(WI.LogContentView.prototype._showHiddenMessagesBannerIfNeeded): Added.
(WI.LogContentView.prototype._markScopeBarItemUnread): Deleted.
(WI.LogContentView.prototype._markScopeBarItemForMessageLevelUnread): Deleted.
* UserInterface/Views/LogContentView.css:
(.content-view.log):
(.content-view.log > .hidden-messages-banner): Added.
(.content-view.log > .hidden-messages-banner > button): Added.
(.content-view.log > .hidden-messages-banner > .dismiss): Added.
(body[dir=ltr] .content-view.log > .hidden-messages-banner > .dismiss): Added.
(body[dir=rtl] .content-view.log > .hidden-messages-banner > .dismiss): Added.
(.console-messages):
(.log-scope-bar > li:not(.unread) > .indicator): Deleted.
(.log-scope-bar > li.unread > .indicator): Deleted.
(.log-scope-bar > li.unread:hover > .indicator): Deleted.
(.log-scope-bar > li.unread.evaluations > .indicator): Deleted.
(.log-scope-bar > li.unread.errors > .indicator): Deleted.
(.log-scope-bar > li.unread.warnings > .indica

--- a/Source/WebInspectorUI/UserInterface/Views/LogContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/LogContentView.css
@@ -23,62 +23,58 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-.log-scope-bar > li:not(.unread) > .indicator {
-    display: none;
-}
-
-.log-scope-bar > li.unread > .indicator {
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    animation: unread-background-pulse 1.5s ease-in-out infinite alternate-reverse;
-    -webkit-clip-path: circle(50% at 50% 50%);
-
-    -webkit-margin-start: -10px;
-    -webkit-margin-end: 2px;
-}
-
-.log-scope-bar > li.unread:hover > .indicator {
-    visibility: hidden;
-}
-
-.log-scope-bar > li.unread.evaluations > .indicator {
-    background-color: darkgrey;
-}
-
-.log-scope-bar > li.unread.errors > .indicator {
-    background-color: hsl(0, 95%, 72%);
-}
-
-.log-scope-bar > li.unread.warnings > .indicator {
-    background-color: hsl(48, 98%, 51%);
-}
-
-.log-scope-bar > li.unread.logs > .indicator {
-    background-color: hsl(213, 92%, 77%);
-}
-
-@keyframes unread-background-pulse {
-    from { background-color: transparent; }
-}
-
 .content-view.log {
-    overflow-y: auto;
-    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.content-view.log > .hidden-messages-banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: var(--navigation-bar-height);
+    padding: 0 4px;
+    color: var(--yellow-highlight-text-color);
+    background-color: var(--yellow-highlight-background-color);
+    border-bottom: 1px solid var(--border-color);
+}
+
+.content-view.log > .hidden-messages-banner {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.content-view.log > .hidden-messages-banner > button {
+    -webkit-margin-start: 4px;
+}
+
+.content-view.log > .hidden-messages-banner > .dismiss {
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    padding-bottom: 2px;
+}
+
+body[dir=ltr] .content-view.log > .hidden-messages-banner > .dismiss {
+    right: 5px;
+}
+
+body[dir=rtl] .content-view.log > .hidden-messages-banner > .dismiss {
+    left: 5px;
 }
 
 .console-messages {
     display: flex;
     flex-direction: column;
-
-    word-wrap: break-word;
-
+    height: 100%;
     font-family: -webkit-system-font, sans-serif;
     font-size: 12px;
-
-    min-height: 100%;
-
+    word-wrap: break-word;
     outline: none;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .console-messages > :first-child {
